Bug 828246 - Prevent stroke from drawing, on SVG text with a stroke-width of 0. r=dholbert