layout/svg/nsSVGPathGeometryFrame.cpp
@@ -595,11 +595,8 @@ nsSVGPathGeometryFrame::Render(nsRenderingContext *aContext)
     gfx->Fill();
   }
 
-  if (nsSVGUtils::HasStroke(this, objectPaint)) {
-    nsSVGUtils::SetupCairoStrokeHitGeometry(this, gfx, objectPaint);
-    if (nsSVGUtils::SetupCairoStrokePaint(this, gfx, objectPaint)) {
-      gfx->Stroke();
-    }
+  if (nsSVGUtils::SetupCairoStroke(this, gfx, objectPaint)) {
+    gfx->Stroke();
   }
 
   gfx->NewPath();
